# AdaptWing

./: README.md  test.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: px4ctrl.pc  rtk.pc
devel/lib/rtk/: location_node
devel/share/px4ctrl/cmake/: px4ctrlConfig.cmake
devel/share/rtk/cmake/: rtkConfig.cmake
shellFiles/: forward.py  goforward.sh  land.sh  launch.sh
src/circle_detection/circle_detection/: CMakeLists.txt  package.xml
src/circle_detection/circle_detection/include/: circle_detection.h
src/circle_detection/circle_detection/launch/: circle_detection_node.launch
src/circle_detection/circle_detection/msg/: Circle_Center.msg
src/circle_detection/circle_detection/src/: circle_detection.cpp
src/control/px4ctrl/config/: ctrl_param_fpv.yaml
src/control/px4ctrl/launch/: run_ctrl.launch
src/control/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  controller.cpp  input.cpp  input.h  px4ctrl_node.cpp
src/location/VINS-Fusion/config/: AdaptWing.yaml  fast_drone_250.yaml  right.yaml
src/location/VINS-Fusion/vins_estimator/launch/: AdaptWing.launch
src/location/odom_fusion/include/odom_fusion/: odom_fusion.h
src/location/odom_fusion/launch/: odom_fusion.launch
src/location/odom_fusion/src/: odom_fusion.cpp
src/location/rtk/: CMakeLists.txt
src/location/rtk/include/rtk/: location.h
src/location/rtk/launch/: rtk.launch
src/location/rtk/src/: dingwei.py  locationFuntions_def.cpp  location_node.cpp
src/planner/Apriltag/usb_camera/: CMakeLists.txt  package.xml
src/planner/Apriltag/usb_camera/include/apriltag/: apriltag.h
src/planner/Apriltag/usb_camera/src/: apriltag.cpp
src/planner/EGO-Planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
src/planner/EGO-Planner/plan_manage/launch/: advanced_param_exp.xml  default.rviz  single_run_in_exp.launch  single_run_in_sim.launch
src/planner/EGO-Planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp
src/planner/EGO-Planner/traj_utils/: CMakeLists.txt
src/planner/MinimumSnap/trajectory_generator/: CMakeLists.txt  package.xml
src/planner/MinimumSnap/trajectory_generator/include/trajectory_generator/: trajectory_generator.h
src/planner/MinimumSnap/trajectory_generator/launch/: test.launch
src/planner/MinimumSnap/trajectory_generator/rviz_config/: nuc.rviz  test_traj.rviz
src/planner/MinimumSnap/trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
src/planner/MinimumSnap/waypoint_generator/src/: sample_waypoints.h  waypoint_generator.cpp
src/planner/console/: CMakeLists.txt  package.xml
src/planner/console/include/console/: console.hpp
src/planner/console/launch/: fly.launch  rviz.launch
src/planner/console/msg/: ConsoleState.msg
src/planner/console/src/: console_FSM.cpp  console_node.cpp  minimumsnap.cpp
